PXD-82: Fix stick header on horizontal scroll

--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/TitleContainer.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/TitleContainer.less
@@ -6,6 +6,7 @@
 
   position: sticky;
   top: 0;
+  left: -@padding;
   margin: 0 -@padding 0 -@padding;
   padding: @padding @padding 10px;
   background: white;
